Proper implementation of alignments in IOrderedLayout + small fixes to css-files and some typos corrected
svn changeset:3251 branch:trunk

--- a/src/com/itmill/toolkit/terminal/gwt/public/default/accordion/accordion.css
+++ b/src/com/itmill/toolkit/terminal/gwt/public/default/accordion/accordion.css
@@ -1,6 +1,7 @@
 .i-accordion {
 	outline: none;
 	overflow: hidden;
+	text-align: left /* Force default alignment */
 }
 
 .i-accordion-item-caption {
