--- a/src/com/itmill/toolkit/terminal/gwt/public/default/caption/caption.css
+++ b/src/com/itmill/toolkit/terminal/gwt/public/default/caption/caption.css
@@ -3,6 +3,7 @@
    they aren't even handling their own caption) */
 .i-captionwrapper {
 	margin: 0.3em 0 0 0;
+	text-align: left /* Force default alignment */
 }
 
 .i-errorindicator {
