fixes http://forum.itmill.com/posts/list/349.page
svn changeset:3259 branch:trunk

--- a/src/com/itmill/toolkit/terminal/gwt/public/default/progressindicator/progressindicator.css
+++ b/src/com/itmill/toolkit/terminal/gwt/public/default/progressindicator/progressindicator.css
@@ -10,3 +10,10 @@
 	height: 9px;
 	overflow: hidden; /* for IE6 */
 }
+
+.i-progressindicator-indeterminate {
+	background: #dfe2e4 url(../common/img/ajax-loader-medium.gif);
+	height: 16px;
+	width: 16px;
+	overflow: hidden; /* for IE6 */
+}
