Fixed IAccordion: contained widgets now get attached properly and work as expected.
svn changeset:3274 branch:trunk

--- a/src/com/itmill/toolkit/terminal/gwt/public/default/accordion/accordion.css
+++ b/src/com/itmill/toolkit/terminal/gwt/public/default/accordion/accordion.css
@@ -27,6 +27,7 @@
 	border-top-color: #cbd7de;
 	border-bottom-color: #bfc9d4;
 	cursor: default;
+	text-shadow: #fafafa 1px 1px 0;
 }
 
 .i-accordion-item-open .i-accordion-item-caption span {
