--- a/src/com/itmill/toolkit/terminal/gwt/public/default/table/table.css
+++ b/src/com/itmill/toolkit/terminal/gwt/public/default/table/table.css
@@ -147,6 +147,8 @@
 	width: 160px;
 	height: 39px;
 	background: transparent url(img/scroll-position-bg.png);
+	opacity: 0.5;
+	filter: alpha(opacity=50);
 }
 
 .i-table-scrollposition span {
