Added classname to ITabSheet's ITabSheetPanel, and added borders to top and bottom; fixes #1457 (PRE -tag caused thick holes trough tabsheet.
svn changeset:3974 branch:trunk

--- a/src/com/itmill/toolkit/terminal/gwt/public/default/tabsheet/tabsheet.css
+++ b/src/com/itmill/toolkit/terminal/gwt/public/default/tabsheet/tabsheet.css
@@ -70,6 +70,12 @@
 	background-color: #fff;
 }
 
+.i-tabsheet-tabsheetpanel {
+	border-top: 1px solid transparent;
+	border-bottom: 1px solid white;
+	margin-bottom: -1px;
+}
+
 .i-tabsheet-deco {
 	height: 9px;
 	background: transparent url(../panel/img/bottom-right.png) repeat-x right top;
