--- a/src/com/itmill/toolkit/terminal/gwt/public/default/window/window.css
+++ b/src/com/itmill/toolkit/terminal/gwt/public/default/window/window.css
@@ -106,7 +106,22 @@
 	background-position: 0 -11px;
 }
 
+.i-window-modalitycurtain {
+	top:0;
+	left:0;
+	background:white;
+	opacity: 0.5;
+	position:fixed;
+	width:100%;
+	height:100%;
+	filter: alpha(opacity=50);
+}
 
+/* IE6 workaround for position:fixed; */
+* html .i-window-modalitycurtain { 
+	position: absolute;
+	top: expression((ignoreMe = document.documentElement.scrollTop) + "px"); 
+}
 
 /* IE specific styles */
 
