fixes multiple issues with tabsheet, accordion, table etc
svn changeset:4033 branch:trunk

--- a/src/com/itmill/toolkit/terminal/gwt/public/default/button/button.css
+++ b/src/com/itmill/toolkit/terminal/gwt/public/default/button/button.css
@@ -8,11 +8,11 @@
 }
 
 .i-button-link {
-	border: 0px;
+	border: none;
 	text-align: left;
 	text-decoration: underline;
 	background: none;
-	padding-left: 0px;
+	padding: 0;
 }
 .i-button-link span {
 	text-decoration: underline;
