Fixed CSS background-image URL (no ' characters allowed)
svn changeset:4262 branch:trunk

--- a/WebContent/ITMILL/themes/default/notification/notification.css
+++ b/WebContent/ITMILL/themes/default/notification/notification.css
@@ -31,7 +31,7 @@
 
 .i-Notification.error {
 	background-color: #ff0a0a;
-	background-image: url('img/notification-error.png');
+	background-image: url(img/notification-error.png);
 	background-repeat: no-repeat;
 	background-position: center right;
 	padding-right: 30px;
