Table editmode: textfield height now the same as plain string height -> switching between modes preserves scroll position. Table column spacing increased for legibility.
svn changeset:4385 branch:trunk

--- a/WebContent/ITMILL/themes/default/table/table.css
+++ b/WebContent/ITMILL/themes/default/table/table.css
@@ -101,12 +101,20 @@
 }
 .i-table-row td,
 .i-table-row-odd td {
-	padding: 3px 0;
+	padding: 0;
 }
 .i-table-cell-content {
 	white-space: nowrap;
 	overflow: hidden;
-	padding-left: 3px;
+	padding: 3px 5px 3px 3px;
+	height: 18px;
+}
+
+/* Fix textfield size to correspond label size in */
+.i-table-cell-content .i-textfield {
+	height: auto;
+	margin: -2px 0 -3px -3px;
+	width: 97%; /* approximate */
 }
 
 
