--- a/WebContent/ITMILL/themes/default/window/window.css
+++ b/WebContent/ITMILL/themes/default/window/window.css
@@ -125,6 +125,10 @@
 
 /* IE specific styles */
 
+* html .i-window {
+	width: 0;
+}
+
 * html .i-window-wrap {
 	padding: 12px;
 	border: 1px solid #e8e9e9;
