--- a/WebContent/ITMILL/themes/default/styles.css
+++ b/WebContent/ITMILL/themes/default/styles.css
@@ -1167,12 +1167,21 @@
 }
 .i-table-row td,
 .i-table-row-odd td {
-	padding: 3px 0;
+	padding: 0;
 }
 .i-table-cell-content {
 	white-space: nowrap;
 	overflow: hidden;
-	padding-left: 3px;
+	padding: 3px 0 3px 3px;
+	margin-right: 5px;
+	height: 18px;
+}
+
+/* Fix textfield size to correspond label size inside table */
+.i-table-cell-content .i-textfield {
+	height: auto;
+	margin: -2px 0 -3px -3px;
+	width: 97%; /* approximate */
 }
 
 
@@ -1297,10 +1306,6 @@
 	line-height: 15px;
 	background: #f8f9f9 url(tabsheet/img/tab-bg.png);
 	cursor: pointer;
-}
-
-.i-tabsheet-tabs .gwt-TabBarItem .i-caption-disabled {
-	cursor: default;
 }
 
 .i-tabsheet-tabs .gwt-TabBarItem-selected {
