--- a/WebContent/ITMILL/themes/default/common/common.css
+++ b/WebContent/ITMILL/themes/default/common/common.css
@@ -48,10 +48,36 @@
 	opacity: 0.3;
 	filter: Alpha(opacity=30);
 }
-
 .i-required-field-indicator {
 	padding-left:2px;
 	color: red;
+}
+
+/* Field modified & error */
+input.i-modified,
+.i-richtextarea.i-modified iframe.gwt-RichTextArea,
+.i-checkbox.i-modified,
+.i-modified .i-select-option,
+.i-modified .i-textfield,
+.i-modified .i-datefield-calendarpanel,
+.i-modified .i-select-select,
+.i-modified .i-select-twincol-selections,
+.i-modified .i-select-twincol-options,
+.i-modified .i-slider-base {
+	background-color: #FFFFE0;
+}
+
+input.i-error,
+.i-richtextarea.i-error iframe.gwt-RichTextArea,
+.i-checkbox.i-error,
+.i-error .i-select-option,
+.i-error .i-textfield,
+.i-error .i-datefield-calendarpanel,
+.i-error .i-select-select,
+.i-error .i-select-twincol-selections,
+.i-error .i-select-twincol-options,
+.i-error .i-slider-base {
+	background-color: #FFE0E0;
 }
 
 /**
