style enhancements (i-error related)
svn changeset:4541 branch:trunk

--- a/WebContent/ITMILL/themes/default/common/common.css
+++ b/WebContent/ITMILL/themes/default/common/common.css
@@ -26,6 +26,10 @@
 	border-top:1px solid transparent;
 }
 
+.i-view:active, .i-view:focus { 
+	outline: none;
+}
+
 .i-app input, 
 .i-window input, 
 .i-app select, 
@@ -64,6 +68,7 @@ input.i-modified,
 .i-modified .i-select-twincol-selections,
 .i-modified .i-select-twincol-options,
 .i-modified .i-slider-base {
+	background:transparent;
 	background-color: #FFFFE0;
 }
 
@@ -77,6 +82,7 @@ input.i-error,
 .i-error .i-select-twincol-selections,
 .i-error .i-select-twincol-options,
 .i-error .i-slider-base {
+	background:transparent;
 	background-color: #FFE0E0;
 }
 
