Moving error indicator to right side of a caption
svn changeset:4552 branch:trunk

--- a/WebContent/ITMILL/themes/default/caption/caption.css
+++ b/WebContent/ITMILL/themes/default/caption/caption.css
@@ -9,10 +9,9 @@
 .i-errorindicator {
 	width: 10px;
 	height: 16px;
-	padding-right:2px;
-	display: block;
-	float:left;
-	background: transparent url(../icons/16/error.png) no-repeat;
+	padding-right:13px;
+	display: inline;
+	background: transparent url(icons/16/error.png) no-repeat top right;
 	vertical-align: middle;
 }
 
