fixing error indicator for IE
svn changeset:4554 branch:trunk

--- a/WebContent/ITMILL/themes/default/caption/caption.css
+++ b/WebContent/ITMILL/themes/default/caption/caption.css
@@ -13,7 +13,13 @@
 	display: inline;
 	background: transparent url(../icons/16/error.png) no-repeat top right;
 }
-
+* html .i-errorindicator {
+	margin-left:-3px;
+}
+*+html .i-errorindicator {
+	margin-left:-3px;
+}
+	
 .i-caption .i-icon {
 	padding-right: 2px;
 	vertical-align: middle;
