--- a/WebContent/ITMILL/themes/default/styles.css
+++ b/WebContent/ITMILL/themes/default/styles.css
@@ -484,6 +484,20 @@ input.i-modified,
 	display: block;
 	background: transparent url(icons/16/error.png) no-repeat top right;
 }
+.i-formlayout-captioncell {
+	text-align:right;
+}
+.i-form-errormessage {
+	background: transparent url(icons/16/error.png) no-repeat top left;
+	padding-left: 20px;
+	margin-bottom: 5px;
+	margin-top: 5px;
+	min-height: 20px;
+}
+
+* html .i-form-errormessage {
+	height: 20px
+}
 
 .i-Notification {
 	font-family: "Trebuchet MS", geneva, helvetica, arial, tahoma, verdana, sans-serif;
