Fixes #1758 (filterselect/combobox 'arrow' reacted to hover when disabled)
svn changeset:4714 branch:trunk

--- a/WebContent/ITMILL/themes/default/styles.css
+++ b/WebContent/ITMILL/themes/default/styles.css
@@ -894,6 +894,9 @@ input.i-modified,
 .i-filterselect-button:hover {
 	background-position: bottom left;
 }
+.i-disabled .i-filterselect-button:hover {
+	background-position: top left;
+}
 
 .i-filterselect-suggestpopup {
 	background: #f6f7f7;
