--- a/WebContent/ITMILL/themes/default/select/select.css
+++ b/WebContent/ITMILL/themes/default/select/select.css
@@ -96,6 +96,9 @@
 .i-filterselect-button:hover {
 	background-position: bottom left;
 }
+.i-disabled .i-filterselect-button:hover {
+	background-position: top left;
+}
 
 .i-filterselect-suggestpopup {
 	background: #f6f7f7;
