Better table example for manual.
svn changeset:4719 branch:trunk

--- a/WebContent/ITMILL/themes/tests-book/styles.css
+++ b/WebContent/ITMILL/themes/tests-book/styles.css
@@ -4,7 +4,7 @@
 /* Styling for tests.magi application.                                       */
 /*****************************************************************************/
 
-#tk5testbench2 {
+.i-app {
 	background: white;
 }
 
